# auth_rocket_api

./: Cargo.toml  README.md
api/: Cargo.toml
api/src/: api_routes.rs
application/: Cargo.toml
application/src/: lib.rs  private.rs
application/src/login/: create_token.rs  login_uc.rs  mod.rs  request_access_token.rs
application/src/user/: create.rs  read.rs
deploy/: api.dockerfile  docker-compose.yml  mongo.dockerfile  postgres.dockerfile
domain/: Cargo.toml
domain/src/: constants.rs  lib.rs  models.rs  schema.rs
infrastructure/: Cargo.toml
infrastructure/migrations/2023-07-13-011049_users/: up.sql
infrastructure/migrations/2023-09-18-221228_add_constraint_on_user/: down.sql  up.sql
infrastructure/src/: lib.rs
settings/: Cargo.toml
settings/src/: settings.rs
shared/: Cargo.toml
shared/src/: response_models.rs
utils/: Cargo.toml
utils/src/: hash_password.rs  lib.rs
